[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Objects/TitleGroundMesh.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Objects/Forest.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/ObjectCampfire.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_env.tres" type="Environment" id=4]
[ext_resource path="res://Resources/MaterialGround.tres" type="Material" id=5]
[ext_resource path="res://Resources/Noise.tres" type="OpenSimplexNoise" id=6]
[ext_resource path="res://Fonts/Bangers-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Resources/TitleFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/GUIs/TitleGUI.gd" type="Script" id=9]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleGUI:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleGUI:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 7 )

[sub_resource type="PlaneMesh" id=4]
material = ExtResource( 5 )
size = Vector2( 256, 256 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="TitleGUI" type="MarginContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.333333 )
margin_left = 100.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TitleGUI"]
margin_right = 365.0
margin_bottom = 545.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleGUI/VBoxContainer"]
margin_right = 365.0
margin_bottom = 279.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.639216, 0.352941, 0.121569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.14902 )
custom_constants/shadow_offset_x = 27
custom_constants/shadow_as_outline = 1
text = "INTO THE
WOODS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="TitleGUI/VBoxContainer"]
margin_top = 379.0
margin_right = 365.0
margin_bottom = 545.0
custom_constants/separation = 20

[node name="Start" type="Button" parent="TitleGUI/VBoxContainer/Buttons"]
margin_right = 365.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 8 )
text = "Start"

[node name="Fullscreen" type="Button" parent="TitleGUI/VBoxContainer/Buttons"]
margin_top = 62.0
margin_right = 365.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 8 )
text = "Fullscreen"

[node name="Quit" type="Button" parent="TitleGUI/VBoxContainer/Buttons"]
margin_top = 124.0
margin_right = 365.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 8 )
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = null
script = ExtResource( 1 )
noise = ExtResource( 6 )
height = 3

[node name="Forest" type="Spatial" parent="Ground"]
script = ExtResource( 2 )

[node name="ObjectCampfire" parent="Ground" instance=ExtResource( 3 )]

[node name="Camera" type="Camera" parent="Ground"]
transform = Transform( 0.939693, 0.0885213, 0.330366, 0, 0.965926, -0.258819, -0.34202, 0.24321, 0.907673, 0, 0, 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )
[connection signal="animation_finished" from="AnimationPlayer" to="TitleGUI" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="TitleGUI/VBoxContainer/Buttons/Start" to="TitleGUI" method="_on_Start_pressed"]
[connection signal="pressed" from="TitleGUI/VBoxContainer/Buttons/Fullscreen" to="TitleGUI" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="TitleGUI/VBoxContainer/Buttons/Quit" to="TitleGUI" method="_on_Quit_pressed"]
